--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('./vendor/normalize.css');
 
 .page {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   background-size: cover;
   font-family: 'Open Sans', 'Arial', sans-serif;
   color: #363636;
